--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="pt-br">
 <head>
 	<meta charset="UTF-8">
-	<title>Horse Equestrian</title>
+	<title>Theme Horse</title>
 
 	<!-- responsive meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
