feat: landpage deploy

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Theme Horse</title>
+    
 
 	<!-- responsive meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- For IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    
-	<link rel="stylesheet" href="assets/css/aos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+   	<link rel="stylesheet" href="assets/css/aos.css">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">	
 	<link rel="stylesheet" href="assets/css/imp.css">
 	<link rel="stylesheet" href="assets/css/custom-animate.css">
